# aura

./: .dockerignore  .geminiignore  .gitignore  Aura.example.toml  Aura.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  Makefile  README.md  ROADMAP.md  SECURITY.md  TASKS.md  exhaustive_audit.py  find_constants.py  gap-analysis.md  test_script.sh
aura/: Cargo.toml
aura-cli/: Cargo.toml
aura-cli/src/: lib.rs  main.rs
aura-cli/src/commands/: history.rs  mod.rs  probe.rs
aura-core/: Cargo.toml  clippy.toml
aura-core/benches/: buffer_bench.rs  storage_bench.rs
aura-core/src/: bt_task.rs  buffer_pool.rs  glob.rs  lib.rs  lpd.rs  magnet.rs  metalink.rs  net_util.rs  power.rs  test_helpers.rs  torrent.rs
aura-core/src/api/: logic.rs  tests.rs
aura-core/src/bitfield/: logic.rs  tests.rs
aura-core/src/bt_task/: choker.rs  dht.rs  logic.rs  lpd.rs  mod.rs  tests.rs  tracker.rs
aura-core/src/bt_worker/: logic.rs  message_handlers.rs  mod.rs  protocol.rs  tests.rs  worker.rs
aura-core/src/buffer_pool/: logic.rs
aura-core/src/config/: bandwidth.rs  bittorrent.rs  bulk.rs  credentials.rs  credentials_tests.rs  general.rs  hooks.rs  limits.rs  logic.rs  logic_tests.rs  mod.rs  network.rs  notifications.rs  resource_mapping.rs  scheduler.rs  scheduler_tests.rs  storage.rs  tui.rs  vpn.rs
aura-core/src/dht/: actor.rs  mod.rs  protocol.rs  protocol_tests.rs  routing.rs  routing_tests.rs  tests.rs
aura-core/src/glob/: logic.rs  tests.rs
aura-core/src/history/: mod.rs  tests.rs
aura-core/src/hooks/: logic.rs  mod.rs  tests.rs
aura-core/src/lpd/: logic.rs  tests.rs
aura-core/src/magnet/: logic.rs  tests.rs
aura-core/src/metalink/: logic.rs  tests.rs
aura-core/src/nat/: logic.rs
aura-core/src/net_util/: logic.rs  logic_tests.rs  mod.rs  resolver.rs  resolver_tests.rs  uri_validation.rs  uri_validation_tests.rs
aura-core/src/orchestrator/: advanced_net_and_tenant_tests.rs  bulk.rs  command.rs  commands.rs  dag_cycle_tests.rs  engine.rs  engine_api.rs  engine_tests.rs  event_handlers.rs  event_handlers_tests.rs  events.rs  logic.rs  mapping.rs  mapping_tests.rs  mod.rs  monitors.rs  monitors_tests.rs  notifications.rs  policy_manager.rs  policy_manager_tests.rs  protocol_detector.rs  protocol_detector_tests.rs  refresh.rs  resource_governor.rs  resource_governor_tests.rs  runner.rs  state.rs  structs.rs  subtask_event.rs  subtask_failure.rs  subtask_handlers.rs  task_handle.rs  telemetry.rs  test_helpers.rs  tests_dependencies.rs  tests_racing.rs  traits.rs  vpn_enforcement.rs  vpn_enforcement_tests.rs  watch.rs  (+1 more)
aura-core/src/peer_registry/: logic.rs  logic_tests.rs  mod.rs  scorer.rs  scorer_tests.rs
aura-core/src/piece_picker/: logic.rs  tests.rs
aura-core/src/power/: logic.rs  logic_tests.rs
aura-core/src/rss/: manager.rs  manager_tests.rs  mod.rs  parser.rs  parser_tests.rs
aura-core/src/scrubber/: actor.rs  mod.rs
aura-core/src/security/: alt_svc.rs  alt_svc_tests.rs  mod.rs  tests.rs
aura-core/src/storage/: aggregator.rs  completion.rs  engine.rs  locker.rs  logic.rs  mod.rs  ops.rs  prober.rs  prober_tests.rs  recheck.rs  recheck_tests.rs  registry.rs  sandbox.rs  scheduler.rs  scheduler_tests.rs  sys.rs  tests.rs  tests_advanced.rs  tests_core.rs  tests_locking.rs  traits.rs  utils.rs
aura-core/src/task/: extension.rs  logic.rs  meta.rs  mod.rs  phase.rs  range.rs  state.rs  subtask.rs
aura-core/src/test_helpers/: mock_storage.rs
aura-core/src/throttler/: bucket.rs  bucket_tests.rs  logic.rs  logic_tests.rs  mod.rs
aura-core/src/torrent/: logic.rs  metadata.rs  mod.rs  tests.rs  v2.rs
aura-core/src/tracker/: http.rs  http_scrape.rs  logic.rs  mod.rs  parsing.rs  tests.rs  udp.rs  udp_scrape.rs
aura-core/src/transport/: ledbat.rs  mod.rs  packet.rs  socket.rs  socket_io.rs  tests.rs
aura-core/src/vpn/: logic.rs  mod.rs  monitor.rs  openvpn.rs  tests.rs  wireguard.rs
aura-core/src/worker/: builder.rs  ftp.rs  ftp_tests.rs  gdrive.rs  gdrive_utils.rs  http.rs  mod.rs  nntp.rs  s3.rs  types.rs
aura-core/tests/: cucumber.rs  storage_backpressure_tests.rs
aura-core/tests/features/: aggregation.feature  cloud.feature  conditional_get.feature  config.feature  credentials.feature  daemon.feature  errors.feature  governance.feature  hooks.feature  integrity.feature  networking.feature  reliability.feature  seeding_limits.feature  storage.feature  swarm.feature
aura-core/tests/steps/: aggregation.rs  cloud.rs  conditional_get.rs  config.rs  credentials.rs  daemon.rs  errors.rs  governance.rs  hooks.rs  integrity.rs  mod.rs  networking.rs  reliability.rs  seeding_limits.rs  storage.rs  swarm.rs
aura-daemon/: Cargo.toml
aura-daemon/src/: assets.rs  extension.rs  fd_limit.rs  jsonrpc.rs  jsonrpc_tests.rs  launcher.rs  lib.rs  lib_tests.rs  main.rs  metrics.rs  metrics_tests.rs  router.rs  scrubber.rs  scrubber_tests.rs  server.rs  test_helpers.rs  tls.rs  types.rs  websocket.rs  websocket_tests.rs
aura-daemon/src/jsonrpc/: download.rs  mod.rs  router.rs  system.rs  utils.rs
aura-daemon/tests/: ws_test.rs
aura-daemon/web/: app.js  index.html  style.css
aura-tui/: Cargo.toml
aura-tui/src/: app.rs  lib.rs  main.rs  ui.rs
aura-tui/src/app/: mod.rs  navigation.rs  rpc.rs  state.rs
aura-tui/src/ui/: dashboard.rs  discovery.rs  file_selector.rs  help.rs  mission_control.rs  mod.rs
aura/src/: cli_client.rs  feed.rs  logging.rs  main.rs  service.rs  service_tests.rs  service_windows.rs
crates/aura-cli/: Cargo.toml
crates/aura-cli/src/: main.rs
crates/aura-core/: Cargo.toml  test.metalink
crates/aura-core/benches/: storage_bench.rs
crates/aura-core/proptest-regressions/: lpd.txt
crates/aura-core/src/: api.rs  bitfield.rs  bt_task.rs  bt_worker.rs  buffer_pool.rs  config.rs  dht.rs  glob.rs  lib.rs  lpd.rs  magnet.rs  metalink.rs  nat.rs  net_util.rs  orchestrator.rs  peer_registry.rs  piece_picker.rs  power.rs  storage.rs  task.rs  throttler.rs  torrent.rs  tracker.rs  worker.rs
crates/aura-daemon/: Cargo.toml
crates/aura-daemon/src/: main.rs
crates/aura-tui/: Cargo.toml
(+513 files in other folders)
