[workspace]
members = [
    "crates/aura-core",
    "crates/aura-cli",
    "crates/aura-tui",
    "crates/aura-daemon",
]
resolver = "2"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked" # Fast linking on macOS
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

