[workspace]
members = [
    "aura-core",
    "aura-cli",
    "aura-tui",
    "aura-daemon",
    "aura"
]
resolver = "2"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked" # Fast linking on macOS
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true


[workspace.dependencies]
anyhow = "1"
arc-swap = "1.9.1"
async-stream = "0.3"
async-trait = "0.1"
aura-cli = { path = "aura-cli" }
aura-core = { path = "aura-core" }
aura-daemon = { path = "aura-daemon" }
aura-tui = { path = "aura-tui" }
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rcgen = "0.13"
bytes = "1"
bytesize = "2.3.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crab_nat = "0.7.6"
criterion = { version = "0.8", features = ["async_tokio"] }
crossterm = "0.29"
cucumber = "0.23.0"
futures = "0.3.32"
futures-util = { version = "0.3", features = ["sink"] }
fs2 = "0.4.3"
hex = "0.4.3"
hickory-resolver = { version = "0.26.1", features = ["tokio", "serde", "webpki-roots", "https-aws-lc-rs", "tls-aws-lc-rs", "system-config"] }
igd-next = { version = "0.17.1", features = ["aio_tokio", "tokio"] }
libc = "0.2.186"
indicatif = "0.18"
local-ip-address = "0.6.12"
lru = "0.18.0"
lol_html = "3.0"
md-5 = "0.11"
metrics = "0.24.6"
metrics-exporter-prometheus = "0.18.3"
mime_guess = "2.0"
nosleep = "0.2.1"
notify = "8.2.0"
prometheus = "0.14.0"
proptest = "1.6"
quick-xml = { version = "0.40.1", features = ["serialize"] }
rand = { version = "0.10", features = ["std", "std_rng", "thread_rng"] }
ratatui = { version = "0.30", features = ["macros", "all-widgets"] }
regex = "1.12.3"
reqwest = { version = "0.13", features = ["json", "stream", "cookies", "http3"] }
rust-embed = "8.0"
serde = { version = "1", features = ["derive"] }
serde_bencode = "0.2"
serde_bytes = "0.11.19"
serde_json = "1.0.149"
sha1 = "0.11"
sha2 = "0.11"
sled = "0.34"
socket2 = { version = "0.6.3", features = ["all"] }
suppaftp = { version = "8.0.3", features = ["tokio", "tokio-rustls-ring"] }
rustls = { version = "0.23.40", features = ["ring"] }
rustls-native-certs = "0.8.3"
rustix = { version = "1.1.4", features = ["fs"] }
rlimit = "0.10.1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-socks = "0.5.2"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = "0.29"
tokio-util = { version = "0.7", features = ["codec", "rt"] }
toml = "1.1.2"
tower-http = { version = "0.6", features = ["cors"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"
wiremock = "0.6"
