[package]
name = "aura-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
aura-core = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
indicatif = { workspace = true }
url = { workspace = true }
bytesize = { workspace = true }
