[package]
name = "aura-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_bencode = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
md-5 = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
rand = { workspace = true }
url = { workspace = true }
igd-next = { workspace = true }
crab_nat = { workspace = true }
local-ip-address = { workspace = true }
regex = { workspace = true }
socket2 = { workspace = true }
suppaftp = { workspace = true }
fs2 = { workspace = true }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
toml = { workspace = true }
notify = { workspace = true }
notify-rust = { workspace = true }
arc-swap = { workspace = true }
hex = { workspace = true }
nosleep = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
async-stream = { workspace = true }
sled = { workspace = true }
tokio-socks = { workspace = true }
quick-xml = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
hickory-resolver = { workspace = true }
lol_html = { workspace = true }
mime_guess = { workspace = true }
lru = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
wiremock = { workspace = true }
tracing-subscriber = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
cucumber = { workspace = true }
futures = { workspace = true }

[[bench]]
name = "storage_bench"
harness = false

[[test]]
name = "cucumber"
harness = false

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
rustix = { workspace = true }
