[package]
name = "aura-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
aura-core = { path = "../aura-core" }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = { version = "0.10", features = ["std", "std_rng", "thread_rng"] }
tower-http = { version = "0.6", features = ["cors"] }
futures-util = "0.3"
rust-embed = "8.0"
mime_guess = "2.0"

[dev-dependencies]
tokio-tungstenite = "0.24"
