[package]
name = "aura-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
aura-core = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
tower-http = { workspace = true }
futures-util = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
prometheus = { workspace = true }

[dev-dependencies]
tokio-tungstenite = { workspace = true }
