[package]
name = "aura-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
bytesize = { workspace = true }
aura-core = { workspace = true }
arboard = { workspace = true }
