[package]
name = "aura"
version = "0.1.0"
edition = "2021"

[dependencies]
aura-core = { path = "../aura-core" }
aura-cli = { path = "../aura-cli" }
aura-daemon = { path = "../aura-daemon" }
aura-tui = { path = "../aura-tui" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
