[package]
name = "aura"
version = "0.1.0"
edition = "2021"

[dependencies]
aura-core = { workspace = true }
aura-cli = { workspace = true }
aura-daemon = { workspace = true }
aura-tui = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
