[package]
name = "aura-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
aura-core = { path = "../aura-core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
indicatif = "0.17"
url = "2"
reqwest = { version = "0.12", features = ["json"] }
