[package]
name = "aura-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
bytes = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_bencode = "0.2"
sha1 = "0.10"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream", "cookies"] }
futures-util = { version = "0.3", features = ["sink"] }
tokio-util = { version = "0.7", features = ["codec", "rt"] }
rand = "0.8"
url = "2"
serde_json = "1.0.149"
igd-next = { version = "0.17.0", features = ["aio_tokio", "tokio"] }
crab_nat = "0.7.6"
local-ip-address = "0.6.12"
regex = "1.12.3"
socket2 = { version = "0.6.3", features = ["all"] }
suppaftp = { version = "8.0.3", features = ["tokio", "tokio-async-native-tls"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tracing-subscriber = "0.3"
