[package]
name = "aura-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
bytes = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_bencode = "0.2"
sha1 = "0.10"
sha2 = "0.10"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream", "cookies"] }
futures-util = { version = "0.3", features = ["sink"] }
tokio-util = { version = "0.7", features = ["codec", "rt"] }
tokio-stream = { version = "0.1", features = ["sync"] }
rand = { version = "0.10", features = ["std", "std_rng", "thread_rng"] }
url = "2"
serde_json = "1.0.149"
igd-next = { version = "0.17.0", features = ["aio_tokio", "tokio"] }
crab_nat = "0.7.6"
local-ip-address = "0.6.12"
regex = "1.12.3"
socket2 = { version = "0.6.3", features = ["all"] }
suppaftp = { version = "8.0.3", features = ["tokio", "tokio-async-native-tls"] }
toml = "1.1.2"
notify = "8.2.0"
arc-swap = "1.9.1"
serde_bytes = "0.11.19"
percent-encoding = "2.3.2"
hex = "0.4.3"
futures-core = "0.3"
nosleep = "0.2.1"
chrono = { version = "0.4", features = ["serde"] }
async-stream = "0.3"
sled = "0.34"
tokio-socks = "0.5.2"
quick-xml = { version = "0.39.4", features = ["serialize"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tracing-subscriber = "0.3"
proptest = "1.6"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "storage_bench"
harness = false

[[bench]]
name = "buffer_bench"
harness = false
