[package]
name = "aura-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
aura-core = { path = "../aura-core" }
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
