[package]
name = "aura-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
aura-core = { path = "../aura-core" }
ratatui = { version = "0.26", features = ["macros", "all-widgets"] }
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tui-logger = "0.18.2"
throbber-widgets-tui = "0.11.0"
bytesize = "2.3.1"
